# Haiku_CMake_Template

./: CMakeLists.txt
src/: CMakeLists.txt  dynamic.cpp  dynamic.h  static.cpp  static.h  template.cpp  template.h
tests/: CMakeLists.txt  test_template.cpp
